Hooking the Login System with the server
When the user goes through the login process in  the GUI, the server detects a connection, and it welcomes the user.
Next is sending messages to the other users

--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
+# Editor-based Rest Presenters.Client
 .idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
