--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Presenters.Client
+# Editor-based Rest Presenters.Oussama.Client
 .idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
